tests/snapshots/regression/recovery__missing_closer_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/missing_closer_then_continue.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • tests/fixtures/recovery/missing_closer_then_continue.flx
error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  tests/fixtures/recovery/missing_closer_then_continue.flx:1:9
  |
1 | let a = [1, 2, 3;
  |         ^

note: Expected `]` before this token.
  tests/fixtures/recovery/missing_closer_then_continue.flx:1:17
  |
1 | let a = [1, 2, 3;
  |                 ^
